[package]
name = "network-shapley"
version = "0.1.0"
edition = "2024"

[[example]]
name = "simple"
[[example]]
name = "csv_demand1"
[[example]]
name = "csv_demand2"

[dependencies]
clarabel = "0"
faer = "0"
rayon = "1"
thiserror = "2"

csv = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tabled = { version = "0", optional = true }

[dev-dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
tabled = "0"

[features]
serde = ["dep:csv", "dep:serde", "dep:tabled"]

[profile.release]
lto = true
codegen-units = 1
