[package]
name = "network-shapley"
version = "0.1.0"
edition = "2024"

[[example]]
name = "simple"
[[example]]
name = "csv_demand1"
[[example]]
name = "csv_demand2"
[[example]]
name = "link_estimate"

[dependencies]
clarabel = "0"
clap = { version = "4", features = ["derive"], optional = true }
faer = "0"
rayon = "1"
regex = "1"
thiserror = "2"

borsh = { version = "1", features = ["derive"], optional = true }
csv = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tabled = { version = "0", optional = true, features = ["std"] }

[dev-dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
tabled = "0"

[features]
borsh = ["dep:borsh"]
cli = ["dep:clap", "dep:serde_json", "serde"]
serde = ["dep:csv", "dep:serde", "dep:tabled"]

[[bin]]
name = "link-estimate"
path = "src/bin/link_estimate.rs"
required-features = ["cli"]

[profile.release]
lto = true
codegen-units = 1
