[package]
name = "network-shapley"
version = "0.1.0"
edition = "2024"

[[example]]
name = "simple"
[[example]]
name = "csv_demand1"
[[example]]
name = "csv_demand2"

[dependencies]
borsh = { version = "1", features = [ "derive" ] ,optional = true }
csv = { version = "1", optional = true }
faer = "0"
microlp = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"], optional = true }
tabled = { version = "0", optional = true, features = [ "std" ]}
thiserror = "2"

[dev-dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
tabled = "0"

[features]
serde = ["dep:csv", "dep:serde", "dep:tabled"]
borsh = ["dep:borsh"]

[profile.release]
lto = true
codegen-units = 1
